<resources>
    <string name="app_name">休闲五子棋</string>

    <string name="backward">悔&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;棋</string>
    <string name="start_new">重新开局</string>
    <string name="quit">退出</string>
    <string name="start_again">再来一局</string>
    <string name="back_again_quit">再按一次返回退出</string>
    <string name="white_win">白棋胜，黑棋负</string>
    <string name="black_win">黑棋胜，白棋负</string>

    <string name="theme_settings">主题设置</string>
    <string name="mode_choose">模式选择</string>
    <string name="mode">模式</string>
    <string name="theme">主题</string>
    <string name="other">其它</string>
    <string name="other_settings">其它设置</string>
    <string name="about">关于</string>
    <string name="version">版本:</string>
    <string name="context_menu">Context menu</string>
    <string name="confirm">确定</string>
    <string name="junior">初级</string>
    <string name="middle_level">中级</string>
    <string name="high_level">高级</string>
    <string name="mail">邮箱:</string>
    <string name="mail_address">rq880113@163.com</string>

    <string name="bg_choose">背景选择</string>
    <string name="board_color">棋盘颜色</string>

    <string name="single_player">人机对战</string>
    <string name="double_player">双人对弈</string>
    <string name="mode_tips">模式切换将重新开始棋局，人机对战模式无悔棋功能！</string>

    <string name="bg_music">背景音乐</string>
    <string name="piece_sound">落子音效</string>
    <string name="rule">规则说明</string>
    <string name="check_update">检查更新</string>
    <string name="has_no_update">当前版本已是最新版本!</string>
    <string name="has_new_version">发现新版本</string>
    <string name="update_now">马上升级</string>
    <string name="update_next_time">下次再说</string>
    <string name="is_downloading">正在下载...</string>

    <string name="rule_desc">规则说明:\n\t\t\t\t\t&#160;本游戏只为休闲娱乐之用，无禁手等严格规则，玩家可随意落子，只要在横向、竖向、斜向或者反斜向先形成连珠五子即为获胜！</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
