<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.adrian.gomoku.activity.ModeActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/rg_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_single"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/single_player"
                    android:textColor="@color/font_gray" />

                <RadioButton
                    android:id="@+id/rb_double"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/double_player"
                    android:textColor="@color/font_gray" />
            </RadioGroup>

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:background="@color/base_blue"
                android:textSize="@dimen/tool_bar_text_size" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>
