<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_theme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.adrian.gomoku.activity.ThemeActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/base_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/font_gray"
                android:textSize="@dimen/tool_bar_text_size"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/bg_choose" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_bg0"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_weight="1.0"
                    android:src="@drawable/bg_0" />

                <ImageView
                    android:id="@+id/iv_bg1"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_weight="1.0"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/bg_1" />

                <ImageView
                    android:id="@+id/iv_bg2"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_weight="1.0"
                    android:src="@drawable/bg_2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_bg3"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_weight="1.0"
                    android:src="@drawable/bg_3" />

                <ImageView
                    android:id="@+id/iv_bg4"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_weight="1.0"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/bg_4" />

                <ImageView
                    android:id="@+id/iv_bg5"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_weight="1.0"
                    android:src="@drawable/bg_5" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textSize="@dimen/tool_bar_text_size"
                android:textColor="@color/font_gray"
                android:text="@string/board_color" />

            <com.larswerkman.holocolorpicker.ColorPicker
                android:id="@+id/picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <com.larswerkman.holocolorpicker.SVBar
                android:id="@+id/svbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.larswerkman.holocolorpicker.OpacityBar
                android:id="@+id/opacitybar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.larswerkman.holocolorpicker.SaturationBar
                android:id="@+id/saturationbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.larswerkman.holocolorpicker.ValueBar
                android:id="@+id/valuebar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin2"
                android:background="@color/base_blue"
                android:textSize="@dimen/tool_bar_text_size"
                android:text="@string/confirm" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
